# AI-Agent-BOB

./: .env  .env.example  .gitignore  .vercelignore  Dockerfile  INSTALLATION.md  README.md  USAGE.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_FIX.md  app.py  baxus_api.py  bob_cache.db  bob_chat.py  bottle_dataset.py  convert_to_json.py  docker-compose.yml  main.py  models.py  pyproject.toml  recommendation_engine.py  render.yaml  requirements.txt  test_vercel_api.py  vercel-minimal.json  vercel-test.html  vercel.config.js  vercel.json  vercel_app.py  vercel_package.json  vercel_requirements.txt  wsgi.py
api/: health.py  index.py  middleware.py  static.py  vercel.py  vercel_app_routes.py  whisky.py
attached_assets/: Pasted-Bob-the-Whisky-Expert-AI-Agent-Prompt-Overview-Create-an-AI-agent-named-Bob-that-analyzes-users--1746090163718.txt  Pasted-id-name-size-proof-abv-spirit-type-brand-id-popularity-image-url-avg-msrp-fair-price-shelf-price-tot-1746092135140.txt
public/: _headers
static/css/: bob-chat.css  custom.css  main.css
static/data/: bottles.json
static/js/: bob-chat.js  main.js
templates/: base.html  chat.html  error.html  index.html  recommendations.html  recommendations.html.new
templates/components/: chat_widget.html
